# TCredit

./: .env.example  .gitignore  .replit  CHANGELOG.md  CLAUDE.md  EXPLOIT_REPORT_LIVE.md  INFRA.md  KREXA-CHANGELOG.md  KREXA-PROGRAMS.md  KREXA-TECHNICAL-DOCUMENT.md  PLATFORM_GUIDE.md  README.md  SOLANA_SETUP.md  TODO.md  bugs.md  hardhat.config.js  krexa_agent_ladder.md  mint.json  package-lock.json  package.json  pencil.pen  projectplan.xml  render.yaml  replit.md  rules.md  tsconfig.json
.cursor/plans/: x402_and_consultant_agent_bbc0ebdd.plan.md
.github/workflows/: ci.yml
.husky/: pre-commit
app/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  bootstrap.tsx  config.ts  main.tsx  polyfills.ts
backend/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: .gitkeep  app.ts  index.ts
base-contracts/: .env.example  README.md  foundry.toml  todobase.md
base-contracts/deployments/: abis.json  base-sepolia.json  contracts.ts
base-contracts/script/: Deploy.s.sol  DeployAgentIdentity.s.sol  DeployAgentWallet.s.sol  DeployFacilitator.s.sol  DeployTraderVault.s.sol  SeedDemo.s.sol  SeedDemo.sh
base-contracts/src/: AgentIdentity.sol  AgentRegistry.sol  AgentWallet.sol  AgentWalletFactory.sol  Krexa402Facilitator.sol  LiquidityPool.sol  MerchantVault.sol  MilestoneRegistry.sol  PaymentRouter.sol  TraderVault.sol  TraderVaultFactory.sol  VaultFactory.sol
base-contracts/test/: AgentIdentity.t.sol  AgentRegistry.t.sol  AgentWallet.t.sol  CreditScoring.t.sol  E2E.t.sol  KeeperFunctions.t.sol  Krexa402Facilitator.t.sol  LateFees.t.sol  LiquidityPool.t.sol  LiquidityPoolLifecycle.t.sol  MerchantVault.t.sol  MerchantVaultLifecycle.t.sol  MilestoneRegistry.t.sol  MultiInvestorE2E.t.sol  PaymentRouter.t.sol  PaymentRouterSettlement.t.sol  SecurityHardening.t.sol  VaultFactory.t.sol  Waterfall.t.sol
contracts/: DebtToken.sol  MilestoneOracle.sol  VaultFactory.sol
demo/: .env.example  configure-demo.ts  package-lock.json  package.json  run-demo.ts  server.ts  setup-demo.ts  setup-oracle-usdc.ts  tsconfig.json  update-vault-router.ts
demo/agent-service/: .env.example  README.md  package-lock.json  package.json
docs/: FAIRSCALE_INTEGRATION.md  SCOPE_TPAYX_FOR_DEVELOPERS.docx  SCOPE_TPAYX_FOR_DEVELOPERS.md  future-trained-chatbot-agent.md  how-it-works.mdx  introduction.mdx  krexit-score-system.md  mcp-mode.mdx  mint.json  quickstart.mdx  tigerbnkeasya.md
docs/api/: credit.mdx  faucet.mdx  oracle.mdx  overview.mdx  score.mdx  vault.mdx
docs/builders/: integrating-krexit-score.mdx  publishing-x402-service.mdx  sdk.mdx  webhook-events.mdx
docs/cli/: borrow.mdx  config.mdx  faucet.mdx  init.mdx  lp.mdx  mcp.mdx  overview.mdx  repay.mdx  score.mdx  status.mdx  wallet.mdx
docs/guides/: borrowing.mdx  collateral.mdx  improving-score.mdx  lp-guide.mdx  repaying.mdx  service-agents.mdx
evm-contracts/: README.md  package.json
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
mcp-server/: package-lock.json  package.json
oracle/: .env.example  package-lock.json  package.json
sdk/: package-lock.json  package.json
solana-programs/: Anchor.toml  Cargo.toml  PLAYGROUND_LIB.rs  README.md  migrate-vault.ts  package-lock.json  package.json  tsconfig.json
solana-programs/migrations/: deploy.ts
solana-programs/programs/krexa-agent-registry/: Cargo.toml
solana-programs/programs/krexa-agent-registry/src/: lib.rs
solana-programs/programs/krexa-agent-wallet/: Cargo.toml
solana-programs/programs/krexa-agent-wallet/src/: errors.rs  events.rs  lib.rs  state.rs
solana-programs/programs/krexa-agent-wallet/src/instructions/: check_health.rs  create_wallet.rs  deleverage.rs  deposit.rs  execute_trade.rs  freeze.rs  initialize.rs  liquidate.rs  mod.rs  pay_x402.rs  repay.rs  request_credit.rs  transfer_ownership.rs  withdraw.rs
solana-programs/programs/krexa-agent-wallet/src/utils/: health.rs  limits.rs  mod.rs
solana-programs/programs/krexa-common/: Cargo.toml
solana-programs/programs/krexa-common/src/: constants.rs  errors.rs  lib.rs  state.rs
solana-programs/programs/krexa-credit-vault/: Cargo.toml
solana-programs/programs/krexa-credit-vault/src/: lib.rs
solana-programs/programs/krexa-payment-router/: Cargo.toml
solana-programs/programs/krexa-payment-router/src/: lib.rs
solana-programs/programs/krexa-score/: Cargo.toml
solana-programs/programs/krexa-score/src/: errors.rs  lib.rs  state.rs
solana-programs/programs/krexa-service-plan/: Cargo.toml
solana-programs/programs/krexa-service-plan/src/: lib.rs
solana-programs/programs/krexa-venue-whitelist/: Cargo.toml
solana-programs/programs/krexa-venue-whitelist/src/: lib.rs
solana-programs/programs/tigerpay/: Cargo.toml
solana-programs/programs/tigerpay/src/: errors.rs  events.rs  lib.rs
solana-programs/programs/tigerpay/src/instructions/: admin.rs  cancel.rs  cancel_ops.rs  claim_dividends.rs  claim_returns.rs  create_vault.rs  credit_ops.rs  default.rs  default_ops.rs  dividend_ops.rs  icm.rs  icm_ops.rs  initialize.rs  invest.rs  keeper_ops.rs  make_repayment.rs  milestone.rs  milestone_ops.rs  mod.rs  pause.rs  pause_ops.rs  pool_ops.rs  release_tranche.rs  repayment.rs  route_repayment.rs  settlement_ops.rs  tranche.rs
solana-programs/programs/tigerpay/src/security/: mod.rs  reentrancy.rs  signature.rs
solana-programs/programs/tigerpay/src/state/: icm.rs  investor.rs  liquidity_pool.rs  milestone.rs  mod.rs  settlement.rs  vault.rs
solana-programs/scripts/: deploy-devnet.sh  init-devnet.ts  seed-devnet.ts  seed-scores.ts
solana-programs/tests/: agent-registry.test.ts  agent-wallet.test.ts  credit-vault.test.ts  krexa-full-test.ts  payment-router.test.ts  revenue-validation.test.ts  service-plan.test.ts  smoke.ts  tigerpay.ts  venue-whitelist.test.ts
solana-programs/tests/helpers/: create-mock-usdc.ts
test/: DebtToken.test.js  MerchantVault.test.js
x402-middleware/: package-lock.json  package.json
(+445 files in other folders)
