[package]
name        = "krexa-agent-registry"
version     = "0.1.0"
edition     = "2021"
description = "Program 1: KYA identity verification, agent registration, credit scoring"

[lib]
crate-type = ["cdylib", "lib"]
name = "krexa_agent_registry"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []

[dependencies]
anchor-lang  = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.30.1" }
krexa-common = { path = "../krexa-common" }
