[package]
name        = "krexa-payment-router"
version     = "0.1.0"
edition     = "2021"
description = "Program 5: x402 payment routing + revenue waterfall from agent vaults"

[lib]
crate-type = ["cdylib", "lib"]
name = "krexa_payment_router"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []

[dependencies]
anchor-lang        = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl         = { version = "0.30.1", features = ["token", "associated_token"] }
krexa-common       = { path = "../krexa-common" }
krexa-credit-vault = { path = "../krexa-credit-vault", features = ["cpi"] }
