[package]
name        = "krexa-service-plan"
version     = "0.1.0"
edition     = "2021"
description = "Program 6: Type B service agent enforcement — milestone disbursement, expense whitelisting, revenue velocity monitoring, wind-down"

[lib]
crate-type = ["cdylib", "lib"]
name = "krexa_service_plan"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []

[dependencies]
anchor-lang          = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl           = { version = "0.30.1", features = ["token", "associated_token"] }
krexa-common         = { path = "../krexa-common" }
krexa-credit-vault   = { path = "../krexa-credit-vault",   features = ["cpi"] }
krexa-agent-wallet   = { path = "../krexa-agent-wallet",   features = ["cpi"] }
krexa-agent-registry = { path = "../krexa-agent-registry", features = ["cpi"] }
