[package]
name        = "krexa-venue-whitelist"
version     = "0.1.0"
edition     = "2021"
description = "Program 4: Approved protocol registry — Jupiter, Raydium, Pump.fun, Orca, x402"

[lib]
crate-type = ["cdylib", "lib"]
name = "krexa_venue_whitelist"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []
idl-build      = ["anchor-lang/idl-build", "anchor-spl/idl-build", "krexa-common/idl-build"]

[dependencies]
anchor-lang  = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.30.1" }
krexa-common = { path = "../krexa-common" }
