[package]
name = "tigerpay"
version = "0.1.0"
description = "TigerPay - Merchant fundraising platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tigerpay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

# [dev-dependencies]
# Commented out: these pull rayon/blake3 versions incompatible with Rust 1.75
# Re-enable when upgrading to Rust 1.80+ for testing
# solana-program-test = "1.18"
# solana-sdk = "1.18"
